Refactored p.py and added more description to README.md

--- a/properties/my_file.properties
+++ b/properties/my_file.properties
@@ -1,3 +1,5 @@
 foo = I am awesome
 bar = ${chocolate}-bar
 chocolate = fudge
+long = a very long property that is described in the property file which takes up \
+multiple lines can be defined by the escape character as it is done here
