Updated version number

--- a/properties/my_file.properties
+++ b/properties/my_file.properties
@@ -3,3 +3,4 @@ bar = ${chocolate}-bar
 chocolate = fudge
 long = a very long property that is described in the property file which takes up \
 multiple lines can be defined by the escape character as it is done here
+url=example.com/api?auth_token=xyz
