feat: resolve env vars while substituting defaults to false for backward compatibility collect missing keys instead of throwing exception

--- a/properties/my_file.properties
+++ b/properties/my_file.properties
@@ -4,3 +4,6 @@ chocolate = fudge
 long = a very long property that is described in the property file which takes up \
 multiple lines can be defined by the escape character as it is done here
 url=example.com/api?auth_token=xyz
+user_dir=${HOME}/test
+unresolved = ${HOME}/files/${id}/${bar}/
+fname_template = /opt/myapp/{arch}/ext/{objid}.dat
