add github action on feature branch

--- a/properties/.github/workflows/python-package.yaml
+++ b/properties/.github/workflows/python-package.yaml
@@ -5,7 +5,7 @@ name: Python package
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", "feature" ]
   pull_request:
     branches: [ "master" ]
 
