--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,8 +37,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        coverage run -m pytest
-        coverage report -m > pytest-coverage.txt
+        pytest --cov-report=term-missing:skip-covered --cov=app tests/ | tee pytest-coverage.txt
     - name: Pytest coverage comment
       uses: MishaKav/pytest-coverage-comment@main
       with:
