gist secret set up

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -58,9 +58,9 @@ jobs:
     - name: Create the Badge
       uses: schneegans/dynamic-badges-action@v1.6.0
       with:
-        auth: ${{ secrets.PYTEST_COVERAGE_COMMENT }}
-        gistID: 5e90d640f8c212ab7bbac38f72323f80
-        filename: pytest-coverage-comment__main.json
+        auth: ${{ secrets.GIST_SECRET }}
+        gistID: a10c3bfcf9d174b0b0119bfd3d8d1c82
+        filename: pythonpropertyfileloader__main.json
         label: Coverage Report
         message: ${{ steps.coverageComment.outputs.coverage }}
         color: ${{ steps.coverageComment.outputs.color }}
